Replace overflow: auto with :hidden to prevent scrollbars

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -66,7 +66,7 @@ ul.border
       color: #cdcdcd
       border: 0
       background: transparent
-      overflow: auto
+      overflow: hidden
       padding: 20px
       width: 100%
       height: 280px
@@ -82,7 +82,7 @@ ul.border
       margin-bottom: 30px
     .show_hint
       min-height: 29px
-      overflow: auto
+      overflow: hidden
       padding: 20px
       span
         color: #0e0f0f
@@ -98,7 +98,7 @@ ul.border
     .details
       color: #0e0f0f
       background: #8d8d8d
-      overflow: auto
+      overflow: hidden
       margin-bottom: 20px
       padding: 5px 20px
       width: 100%
@@ -160,7 +160,7 @@ form
 .success
   display: none
   background: transparent image-url("icon_checkmark.png") 15px 19px no-repeat
-  overflow: auto
+  overflow: hidden
   padding: 10px 10px 10px 45px
   a
     font-size: 15px
@@ -188,7 +188,7 @@ body
   > header
     background: #131313
     padding: 15px 0
-    overflow: auto
+    overflow: hidden
     h1
       float: left
       display: block
@@ -336,7 +336,7 @@ section
     .border_box
       clear: both
       border: 1px solid #2c2c2c
-      overflow: auto
+      overflow: hidden
       margin-bottom: 20px
       h3
         display: block
@@ -381,7 +381,7 @@ section
 
 
   &#home
-    overflow: auto
+    overflow: hidden
     padding-bottom: 45px
     > article
       float: left
@@ -407,7 +407,7 @@ section
 
 footer
   padding: 40px 0
-  overflow: auto
+  overflow: hidden
   +box-sizing
   .border-link
     font-size: 13px
